# Particle-Packing-Generator

./: CMakeLists.txt  README.md
bindings/: binding.cpp
include/: CApi.h  Core.h  Interface.h  PackingGenerator.h  Particle.h  SpatialIndex.h  Sphere.h  VoxelGrid.h
src/: CApi.cpp  Interface.cpp  PackingGenerator.cpp  Particle.cpp  SpatialIndex.cpp  Sphere.cpp  VoxelGrid.cpp
tests/: Example.cpp  PackingGeneratorExample.py
